--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -16,7 +16,7 @@
   <div [hidden] = "isMovieHidden">
   <div class="row">
     <div class="col-md-4">
-      <div><img src="{{movie.Poster}}"></div>
+      <div class="text-center"><img src="{{movie.Poster}}"></div>
       <div><b>Year:</b> {{movie.Year}}</div>        
       <div><b>Country:</b> {{movie.Country}}</div>
       <div><b>Language:</b> {{movie.Language}}</div>
