--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,10 +1,10 @@
 <!-- LOGIN -->
-<div class="row" [hidden]="isLogin">
+<div class="row" [hidden]="isShowSignup">
   <div class="col-md-4 col-sm-3"></div>
   <div class="col-md-4 col-sm-6 col">
     <form action="" method="post">
       <h2 class="form-signin-heading">Please sign in</h2>
-      <span style="color:red; font-weight: bold;">{{errorMessage}}</span>
+      <span class="error-message">{{errorMessage}}</span>
       <input #login type="text" class="form-control" placeholder="Login" required="" autofocus="">
       <input #password type="password" class="form-control" placeholder="Password" required="">
       <label>
@@ -18,11 +18,11 @@
 </div>
 
 <!-- SIGNUP -->
-<div class="row" [hidden]="!isLogin">
+<div class="row" [hidden]="!isShowSignup">
   <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
     <form role="form" action="" method="post">
       <h2>Please Sign Up</h2>
-      <span style="color:red; font-weight: bold;">{{errorMessage}}</span>
+      <span class="error-message">{{errorMessage}}</span>
       <hr class="colorgraph">
       <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-6">
