--- a/src/styles.css
+++ b/src/styles.css
@@ -1,16 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-    background-color: #eee;
-  }
-  
-  .content{
-    position: fixed;
-    top: 45%;
-    left: 25%;
-    width: 900px;
-  }
-  
-  .bb-line{
-    border-bottom:1px solid #ccc;
-    margin: 10px auto 10px;
-  }
+  background-color: #eee;
+}
+
+.content{
+  position: fixed;
+  top: 45%;
+  left: 25%;
+  width: 900px;
+}
+
+.bb-line{
+  border-bottom:1px solid #ccc;
+  margin: 10px auto 10px;
+}
+
+.error-message {
+  color:red;
+  font-weight: bold;
+}
